--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,173 @@
-/* место для вашего кода */
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 1fr 148px 1fr;
+    width: 1052px;
+    height: 105px;
+    flex-shrink: 0;
+    margin: 92px auto 91px auto;
+}
+
+.header__menu {
+    grid-column: 1/2;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+
+.header__menu-list {
+    display: flex;
+    gap: 32px;
+    list-style: circle;
+}
+
+.header__menu-list-item {
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.header__list-item_active {
+    list-style: none;
+}
+
+.header__list-item_active a {
+    text-decoration: none;
+}
+
+.header__logo {
+    grid-column: 2/3;
+    display: flex;
+}
+
+.header__logo-image {
+    display: block;
+    margin: auto;
+    width: 148px;
+    height: 105px;
+    
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    height: 97px;
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
+}
+
+.header__contacts {
+    grid-column: 3/4;
+    justify-self: end;
+    align-self: center;
+    margin-right: 30px;
+}
+
+.title {
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: 1fr 148px;
+    width: 1082px;
+    height: 744px;
+    background-image: url('../images/cover.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.title__overlay {
+    grid-column: 1/1;
+    grid-row: 1/3;
+}
+
+
+.title__text {
+    width: 100%;
+    height: 100%;
+    padding: 162px 49px 83px 47px;
+    grid-row: 1/2;
+    grid-column: 1/1;
+    z-index: 1;
+}
+
+.accent-span {
+    display: block;
+    color: #FFF;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+
+.text-center {
+    text-align: center;
+    line-height: 135%;
+}
+
+.text-end {
+    line-height: 104%;
+    text-align: end;
+}
+
+.accent-letter-spacing {
+    letter-spacing: 60px;
+}
+
+.accent-letter-spacing-none {
+    letter-spacing: 0;
+}
+
+.title__discription {
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    grid-column: 1/1;
+    grid-row: -1/-2;
+    justify-content: space-between;
+    align-content: center;
+    padding: 0 49px 0 80px;
+    z-index: 1;
+}
+
+.title__description-text {
+    color: #FFF;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+}
+
+.bet-button {
+    width: 252px;
+    height: 52px;
+    color: #FFF;
+    text-align: center;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid #FFF;
+    background: none;
+}
