--- a/styles/style.css
+++ b/styles/style.css
@@ -26,11 +26,8 @@ header {
 }
 
 .header__menu-list-item {
-    color: #000;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 
 .header__list-item_active {
@@ -59,9 +56,7 @@ header {
     flex-direction: column;
     width: 240px;
     height: 97px;
-    color: #000;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
     line-height: 24.3px;
 }
@@ -74,7 +69,8 @@ header {
 }
 
 .title {
-    margin: 0 auto;
+    position: relative;
+    margin: 0 auto 176px auto;
     display: grid;
     grid-template-rows: 1fr 148px;
     width: 1082px;
@@ -85,21 +81,16 @@ header {
 }
 
 .overlay {
+    position: absolute;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.title__overlay {
-    grid-column: 1/1;
-    grid-row: 1/3;
-}
-
-
 .title__text {
     width: 100%;
     height: 100%;
-    padding: 162px 49px 83px 47px;
+    padding: 162px 49px 80px 47px;
     grid-row: 1/2;
     grid-column: 1/1;
     z-index: 1;
@@ -140,7 +131,7 @@ header {
     width: 100%;
     height: 100%;
     grid-column: 1/1;
-    grid-row: -1/-2;
+    grid-row: 2/3;
     justify-content: space-between;
     align-content: center;
     padding: 0 49px 0 80px;
@@ -170,4 +161,106 @@ header {
     text-decoration: none;
     border: 1px solid #FFF;
     background: none;
+}
+
+.lots {
+    display: grid;
+    grid-template-rows: 74px 1fr 53px;
+    margin: 0 auto;
+    width: 1034px;
+    height: 682px;
+}
+
+.lots__header {
+    grid-column: 1/1;
+    grid-row: 1/2;
+    padding: 0 37px;
+}
+
+.lots__header h2 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    grid-column: 1/1;
+    grid-row: 2/3;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    width: 100%;
+    height: 100%;
+}
+
+.lots__card-list-item {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-grow: 1;
+    min-width: 328px;
+    min-height: 554px;
+    color: #FFF;
+}
+
+.card_type_film {
+    background-image: url('../images/card-lot-01.jpg');
+    background-position: left;
+    background-size: cover;
+}
+
+.card_type_book {
+    background-image: url('../images/card-lot-02.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.card_type_picture {
+    background-image: url('../images/card-lot-03.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.card-link {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.card__title {
+    align-self: center;
+    max-width: 254px;
+    padding-top: 48px;
+    z-index: 1;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 120%;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+}
+
+.card__text {
+    align-self: center;
+    max-width: 254px;
+    padding-bottom: 46px;
+    z-index: 1;
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.lots__more-information-link {
+    grid-column: 1/1;
+    grid-row: 3/4;
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+    padding: 2px 39px;
+}
+
+.lots__more-information-link a {
+    font-size: 20px;
 }
