--- a/styles/style.css
+++ b/styles/style.css
@@ -1,392 +1,391 @@
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-    display: grid;
-    grid-template-columns: 1fr 148px 1fr;
-    width: 1052px;
-    height: 105px;
-    flex-shrink: 0;
-    margin: 92px auto 91px auto;
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  width: 1052px;
+  height: 105px;
+  flex-shrink: 0;
+  margin: 92px auto 91px auto;
 }
 
 .header__menu {
-    grid-column: 1/2;
-    display: flex;
-    justify-self: center;
-    align-self: center;
+  grid-column: 1/2;
+  display: flex;
+  justify-self: center;
+  align-self: center;
 }
 
 .header__menu-list {
-    display: flex;
-    gap: 32px;
-    list-style: circle;
+  display: flex;
+  gap: 32px;
+  list-style: circle;
 }
 
 .header__menu-list-item {
-    font-size: 18px;
-    font-weight: 400;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .header__list-item_active {
-    list-style: none;
+  list-style: none;
 }
 
 .header__list-item_active a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .header__logo {
-    grid-column: 2/3;
-    display: flex;
-    width: 100%;
-    height: 100%;
+  grid-column: 2/3;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .header__logo-image {
-    display: block;
-    margin: auto;
-    width: 148px;
-    height: 105px;
-    
+  display: block;
+  margin: auto;
+  width: 148px;
+  height: 105px;
 }
 
 .contacts {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    height: 97px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24.3px;
-    font-style: normal;
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  height: 97px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24.3px;
+  font-style: normal;
 }
 
 .header__contacts {
-    grid-column: 3/4;
-    justify-self: end;
-    align-self: center;
-    margin-right: 30px;
+  grid-column: 3/4;
+  justify-self: end;
+  align-self: center;
+  margin-right: 30px;
 }
 
 .title {
-    position: relative;
-    margin: 0 auto 176px auto;
-    display: grid;
-    grid-template-rows: 1fr 148px;
-    width: 1082px;
-    height: 744px;
-    background-image: url('../images/cover.jpg');
-    background-position: center;
-    background-size: cover;
+  position: relative;
+  margin: 0 auto 176px auto;
+  display: grid;
+  grid-template-rows: 1fr 148px;
+  width: 1082px;
+  height: 744px;
+  background-image: url("../images/cover.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .title__text {
-    width: 100%;
-    height: 100%;
-    padding: 162px 49px 80px 47px;
-    grid-row: 1/2;
-    grid-column: 1/1;
-    z-index: 1;
+  width: 100%;
+  height: 100%;
+  padding: 162px 49px 80px 47px;
+  grid-row: 1/2;
+  grid-column: 1/1;
+  z-index: 1;
 }
 
 /* Ниже идут теги для стилизации заголовка "Оно тебе надо" */
 
 .accent-span {
-    display: block;
-    color: #FFF;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 115%;
-    letter-spacing: 30px;
-    text-transform: uppercase;
+  display: block;
+  color: #fff;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
 }
 
 .text-center {
-    text-align: center;
-    line-height: 135%;
-    letter-spacing: 31px;
+  text-align: center;
+  line-height: 135%;
+  letter-spacing: 31px;
 }
 
 .text-end {
-    text-align: end;
-    line-height: 106%;
-    letter-spacing: 29px;
+  text-align: end;
+  line-height: 106%;
+  letter-spacing: 29px;
 }
 
 .accent-letter-spacing {
-    letter-spacing: 60px;
+  letter-spacing: 60px;
 }
 
 .accent-letter-spacing-none {
-    letter-spacing: 0;
+  letter-spacing: 0;
 }
 
 /* Конец секции с тегами для стилизации заголовка "Оно тебе надо" */
 
 .title__discription {
-    align-items: center;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    grid-column: 1/1;
-    grid-row: 2/3;
-    justify-content: space-between;
-    align-content: center;
-    padding: 0 49px 0 80px;
-    z-index: 1;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  grid-column: 1/1;
+  grid-row: 2/3;
+  justify-content: space-between;
+  align-content: center;
+  padding: 0 49px 0 80px;
+  z-index: 1;
 }
 
 .title__description-text {
-    color: #FFF;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    text-transform: uppercase;
-    word-spacing: 18px;
+  color: #fff;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 
 .bet-button {
-    width: 252px;
-    height: 52px;
-    color: #FFF;
-    text-align: center;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid #FFF;
-    background: none;
+  width: 252px;
+  height: 52px;
+  color: #fff;
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 1px solid #fff;
+  background: none;
 }
 
 .bet-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .lots {
-    display: grid;
-    grid-template-rows: 74px 1fr 53px;
-    margin: 0 auto 177px auto;
-    width: 1034px;
-    height: 682px;
+  display: grid;
+  grid-template-rows: 74px 1fr 53px;
+  margin: 0 auto 177px auto;
+  width: 1034px;
+  height: 682px;
 }
 
 .lots__header {
-    grid-column: 1/1;
-    grid-row: 1/2;
-    padding: 0 37px;
+  grid-column: 1/1;
+  grid-row: 1/2;
+  padding: 0 37px;
 }
 
 .lots__header h2 {
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 /* В тегах .lots__card-list и .lots__card-list-item также реализовал возможность добавления карточек в будующем без изменения CSS кода */
 
 .lots__card-list {
-    grid-column: 1/1;
-    grid-row: 2/3;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    width: 100%;
-    height: 100%;
+  grid-column: 1/1;
+  grid-row: 2/3;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  width: 100%;
+  height: 100%;
 }
 
 .lots__card-list-item {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    flex-grow: 1;
-    min-width: 328px;
-    min-height: 554px;
-    color: #FFF;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-grow: 1;
+  min-width: 328px;
+  min-height: 554px;
+  color: #fff;
 }
 
 .card_type_film {
-    background-image: url('../images/card-lot-01.jpg');
-    background-position: left;
-    background-size: cover;
+  background-image: url("../images/card-lot-01.jpg");
+  background-position: left;
+  background-size: cover;
 }
 
 .card_type_book {
-    background-image: url('../images/card-lot-02.jpg');
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/card-lot-02.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_picture {
-    background-image: url('../images/card-lot-03.jpg');
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/card-lot-03.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .card-link {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
 .card__title {
-    align-self: center;
-    max-width: 254px;
-    padding-top: 48px;
-    z-index: 1;
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 120%;
-    text-decoration-line: underline;
-    text-transform: uppercase;
+  align-self: center;
+  max-width: 254px;
+  padding-top: 48px;
+  z-index: 1;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
 }
 
 .card__text {
-    align-self: center;
-    max-width: 254px;
-    padding-bottom: 46px;
-    z-index: 1;
-    font-size: 20px;
-    line-height: 120%;
+  align-self: center;
+  max-width: 254px;
+  padding-bottom: 46px;
+  z-index: 1;
+  font-size: 20px;
+  line-height: 120%;
 }
 
 .card__text::first-line {
-    line-height: 100%;  /* Попытка исправить баг в макете с налезающими друг на друга блоками */
+  line-height: 100%; /* Попытка исправить баг в макете с налезающими друг на друга блоками */
 }
 
 .lots__more-information-link {
-    grid-column: 1/1;
-    grid-row: 3/4;
-    display: flex;
-    align-items: flex-end;
-    width: 100%;
-    height: 100%;
-    padding: 2px 39px;
+  grid-column: 1/1;
+  grid-row: 3/4;
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 2px 39px;
 }
 
 .lots__more-information-link a {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .about {
-    display: grid;
-    grid-template-columns: 328px 1fr;
-    grid-template-rows: 237px 1fr;
-    column-gap: 25px;
-    row-gap: 7px;
-    margin: 0 auto 181px auto;
-    padding-left: 25px;
-    width: 1082px;
-    height: 546px;
+  display: grid;
+  grid-template-columns: 328px 1fr;
+  grid-template-rows: 237px 1fr;
+  column-gap: 25px;
+  row-gap: 7px;
+  margin: 0 auto 181px auto;
+  padding-left: 25px;
+  width: 1082px;
+  height: 546px;
 }
 
 .about__logo {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    justify-self: center;
-    display: flex;
-    width: 237px;
-    height: 237px;
-    border-radius: 237px;
-    background-color: #000;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  justify-self: center;
+  display: flex;
+  width: 237px;
+  height: 237px;
+  border-radius: 237px;
+  background-color: #000;
 }
 
 .about__logo-image {
-    margin: auto;
-    width: 148px;
-    height: 114px;
+  margin: auto;
+  width: 148px;
+  height: 114px;
 }
 
 .about__title {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    align-self: center;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  align-self: center;
 }
 
 .about__title h2 {
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .about__text {
-    grid-column: 2/3;
-    grid-row: 2/3;
+  grid-column: 2/3;
+  grid-row: 2/3;
 }
 
 .about__text p {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 115%;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 115%;
 }
 
 .about__text p:not(:last-child) {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 0 auto 89px auto;
-    width: 984px;
-    height: 97px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0 auto 89px auto;
+  width: 984px;
+  height: 97px;
 }
 
 .footer__contacts {
-    grid-column: 1/2;
-    justify-self: start;
-    align-self: center;
+  grid-column: 1/2;
+  justify-self: start;
+  align-self: center;
 }
 
 .footer__menu {
-    grid-column: 2/3;
-    justify-self: center;
-    align-self: flex-start;
+  grid-column: 2/3;
+  justify-self: center;
+  align-self: flex-start;
 }
 
 .footer__menu-list {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  list-style: none;
 }
 
 .footer__menu-list-item {
-    text-align: center;
-    font-size: 18px;
-    font-weight: 400;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .footer__list-item_active a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .footer__social-list {
-    grid-column: 3/4;
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 100%;
-    gap: 46px;
-    list-style: none;
+  grid-column: 3/4;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  gap: 46px;
+  list-style: none;
 }
 
 .footer__social-icon {
-    width: 48px;
+  width: 48px;
 }
