--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ header {
   height: 97px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 24.3px;
+  line-height: 135%;
   font-style: normal;
 }
 
@@ -149,9 +149,7 @@ header {
 .title__description-text {
   color: #fff;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
+  line-height: 28px; /* 127.273% */
   text-transform: uppercase;
   word-spacing: 18px;
 }
@@ -162,9 +160,6 @@ header {
   color: #fff;
   text-align: center;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
   text-transform: uppercase;
   text-decoration: none;
   border: 1px solid #fff;
