--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,8 @@
-body {
-  display: flex;
-  flex-direction: column;
-}
-
 header {
   display: grid;
   grid-template-columns: 1fr 148px 1fr;
   width: 1052px;
-  height: 105px;
+  min-height: 105px;
   flex-shrink: 0;
   margin: 92px auto 91px auto;
 }
@@ -56,7 +51,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 240px;
-  height: 97px;
+  min-height: 97px;
   font-size: 18px;
   font-weight: 400;
   line-height: 135%;
@@ -74,7 +69,6 @@ header {
   position: relative;
   margin: 0 auto 176px auto;
   display: grid;
-  grid-template-rows: 1fr 148px;
   width: 1082px;
   height: 744px;
   background-image: url("../images/cover.jpg");
@@ -84,15 +78,18 @@ header {
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
 .title__text {
   width: 100%;
   height: 100%;
-  padding: 162px 49px 80px 47px;
+  padding: 162px 49px 0 47px;
   grid-row: 1/2;
   grid-column: 1/1;
   z-index: 1;
@@ -157,12 +154,13 @@ header {
 .bet-button {
   width: 252px;
   height: 52px;
+  font-family: inherit;
   color: #fff;
   text-align: center;
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: none;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   background: none;
 }
 
@@ -172,19 +170,15 @@ header {
 
 .lots {
   display: grid;
-  grid-template-rows: 74px 1fr 53px;
   margin: 0 auto 177px auto;
   width: 1034px;
-  height: 682px;
+  min-height: 682px;
 }
 
 .lots__header {
   grid-column: 1/1;
   grid-row: 1/2;
-  padding: 0 37px;
-}
-
-.lots__header h2 {
+  padding: 0 37px 25px 37px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -204,46 +198,40 @@ header {
 
 .lots__card-list-item {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  flex-grow: 1;
   min-width: 328px;
   min-height: 554px;
   color: #fff;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
   background-image: url("../images/card-lot-01.jpg");
-  background-position: left;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url("../images/card-lot-02.jpg");
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
-  background-position: center;
-  background-size: cover;
 }
 
 .card-link {
-  display: block;
-  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   z-index: 2;
+  text-decoration: none;
 }
 
 .card__title {
   align-self: center;
   max-width: 254px;
   padding-top: 48px;
-  z-index: 1;
+  z-index: 2;
   font-size: 22px;
   font-weight: 700;
   line-height: 120%;
@@ -255,7 +243,7 @@ header {
   align-self: center;
   max-width: 254px;
   padding-bottom: 46px;
-  z-index: 1;
+  z-index: 2;
   font-size: 20px;
   line-height: 120%;
 }
@@ -269,25 +257,19 @@ header {
   grid-row: 3/4;
   display: flex;
   align-items: flex-end;
-  width: 100%;
-  height: 100%;
-  padding: 2px 39px;
-}
-
-.lots__more-information-link a {
+  padding: 25px 39px 2px 39px;
   font-size: 20px;
 }
 
 .about {
   display: grid;
   grid-template-columns: 328px 1fr;
-  grid-template-rows: 237px 1fr;
   column-gap: 25px;
   row-gap: 7px;
   margin: 0 auto 181px auto;
   padding-left: 25px;
   width: 1082px;
-  height: 546px;
+  min-height: 546px;
 }
 
 .about__logo {
@@ -297,7 +279,7 @@ header {
   display: flex;
   width: 237px;
   height: 237px;
-  border-radius: 237px;
+  border-radius: 50%;
   background-color: #000;
 }
 
@@ -311,9 +293,6 @@ header {
   grid-column: 2/3;
   grid-row: 1/2;
   align-self: center;
-}
-
-.about__title h2 {
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -339,7 +318,7 @@ footer {
   grid-template-columns: repeat(3, 1fr);
   margin: 0 auto 89px auto;
   width: 984px;
-  height: 97px;
+  min-height: 97px;
 }
 
 .footer__contacts {
